# x11-input-supercharger

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md
src/: config.rs  gui.rs  main.rs  util.rs  x.rs  xdotool.rs  xinput.rs  xmodmap.rs
src/features/: keyboard_click.rs  mod.rs  scroll.rs
src/gui/: mod.rs  ui.glade
src/x/: xdotool.rs  xlib.rs  xmodmap.rs
