[package]
name = "x11-input-supercharger"
version = "0.3.0"
description = "Adds system-wide Windows-like scrolling mode and conditional clicking using keyboard"
authors = ["Paweł Zmarzły <pawo2500@gmail.com>"]
repository = "https://github.com/pzmarzly/x11-input-supercharger"
keywords = ["x11", "mouse", "keyboard", "xserver", "tablet"]
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
toml = "0.4.6"
lazy-panic = "0.3.2"
const-cstr = "0.3.0"
ctrlc = "3.1.1"

[dependencies.x11]
version = "2.18.1"
features = ["xlib", "xinput"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true